# stream_viewer

./: LICENSE  conda-requirements.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: README.md
docs/development/: maintenance.md
docs/modules/applications/: lsl_status.md  lsl_viewer.md  lsl_viewer_custom.md  overview.md
docs/modules/data/: overview.md
docs/modules/renderers/: bar_pg.md  base_data.md  base_display.md  line_pg.md  line_vis.md  overview.md  topo_vb.md
docs/modules/widgets/: overview.md
docs/outline/: customizing.md  extending.md  integrating.md  overview.md
stream_viewer/: __init__.py
stream_viewer/applications/: __init__.py  lsl_barpg.py  lsl_custom.py  lsl_linepg.py  lsl_linevis.py  lsl_topovb.py  main.py  minimal_markers.py  minimal_signals.py  stream_status_qml.py
stream_viewer/buffers/: __init__.py  resolver.py  stream_data_buffers.py
stream_viewer/data/: __init__.py  data_source.py  stream_info.py  stream_lsl.py
stream_viewer/qml/: streamInfoListView.qml
stream_viewer/renderers/: __init__.py  bar_pg.py  line_pg.py  line_vis.py  resolver.py  topo_vb.py
stream_viewer/renderers/data/: base.py
stream_viewer/renderers/display/: base.py  pyqtgraph.py  visbrain.py  vispy.py
stream_viewer/utils/: __init__.py  headmodel.py  resolver.py
stream_viewer/widgets/: __init__.py  bar_ctrl.py  config_renderer.py  control_panel.py  interface.py  resolver.py  status_delegate.py  stream_info.py  time_series.py  topo_ctrl.py  visbrain_ctrl.py
